--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Form Automate</title>
+    <style>
+        body {
+            width: 600px;
+            min-height: 600px;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
